gap fix ach

--- a/css/main.scss
+++ b/css/main.scss
@@ -2270,7 +2270,7 @@ box-shadow: 0px 0px 20px#e0e0e0;
     {
         img.svgnxt 
         {
-            transform: translateX(10px);
+            transform: translateX(10px) rotateX(180deg);
             transition: 500ms;
         opacity: 0.4;  
 
